server_k8s/manifests/base/superexec-serverapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superexec-serverapp-deployment
  labels:
    app: superexec-serverapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superexec-serverapp
  template:
    metadata:
      labels:
        app: superexec-serverapp
    spec:
      containers:
        - name: superexec-serverapp
          image: superexec-serverapp:latest
          imagePullPolicy: IfNotPresent
          args:
            - "--insecure"
            - "--plugin-type"
            - "serverapp"
            - "--appio-api-address"
            - "superlink-service:9091"
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
