server_k8s/manifests/base/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
    - name: http
      port: 8080
      targetPort: 8080
