server_k8s/manifests/base/superlink-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superlink-service
spec:
  type: ClusterIP
  selector:
    app: superlink
  ports:
    - name: exec-api
      port: 9091
      targetPort: 9091
      appProtocol: kubernetes.io/h2c
    - name: node-api
      port: 9092
      targetPort: 9092
      appProtocol: kubernetes.io/h2c
    - name: control-api
      port: 9093
      targetPort: 9093
      appProtocol: kubernetes.io/h2c
